# LUCI

./: .gitignore  .readthedocs.yml  25apr2022key.txt  25apr2022key.txt.pub  AUTHORS.rst  CHANGELOG.rst  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Emcee-Real-Copy1.ipynb  Emcee-Real.ipynb  Emcee-Test.ipynb  LICENSE  Luci.bib  Luci.py  LuciAbsorp.py  LuciBase.py  LuciBayesian.py  LuciFit.py  M33.ipynb  NGC1275-Highres.ipynb  NGC1275-Low.py  NGC6946_Chi2.fits  NGC6946_continuum.fits  Perseus-Region.ipynb  Pyregion-Test-Copy1.ipynb  Pyregion-Test.ipynb  README.md  README.rst  Test-Copy1.ipynb  Test.ipynb  Untitled.ipynb  VEL.fits  conda.file  light.mplstyle  luci.yml  luci_absorption_fit_outline.py  luci_macOS-11.6.yml  paper.md  pytest.ini  requirements.txt  (+2 more)
.ipynb_checkpoints/: Analysis3-EMCEE-checkpoint.ipynb  BayesianFit-all-checkpoint.ipynb  Emcee-Real-Copy1-checkpoint.ipynb  Emcee-Real-checkpoint.ipynb  Emcee-Test-checkpoint.ipynb  Luci-Test1-checkpoint.ipynb  LuciBase-checkpoint.py  M33-checkpoint.ipynb  M33-checkpoint.py  M87-checkpoint.ipynb  NGC1275-Highres-checkpoint.ipynb  Perseus-Region-checkpoint.ipynb  Pyregion-Test-Copy1-checkpoint.ipynb  Pyregion-Test-checkpoint.ipynb  Sitelle-Generation-checkpoint.ipynb  Test-Copy1-checkpoint.ipynb  Test-checkpoint.ipynb
ComputeCanada/: run_SN3.py  run_SN3.sh
Data/: Reference-Spectrum-R1800-SN2.fits  Reference-Spectrum-R1800-SN2.fits~  Spectrum_0.fits  Spectrum_1.fits  Spectrum_10.fits  Spectrum_11.fits  Spectrum_12.fits  Spectrum_13.fits  Spectrum_14.fits  Spectrum_15.fits  Spectrum_16.fits  Spectrum_17.fits  Spectrum_18.fits  (+91 more)
(+454 files in other folders)
