[metadata]
name = LUCI-fit
version = 1.0
author = Carter Rhea
author_email = carter.rhea@umontreal.ca
description = A data analysis pipeline for SITELLE data cubes
license = MIT
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/crhea93/LUCI
project_urls =
    Documentation = https://crhea93.github.io/LUCI/index.html
    Tracker = https://github.com/crhea93/LUCI/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
package_dir =
    =
python_requires = >=3.6

[options.packages.find]
where = 
exclude =
    tests
